@@ -1,3 +1,7 @@
+Mon Oct  9 17:19:31 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
+
+	* Added OmFileReaderNode
+
 Mon Oct 09 16:19:43 BST 2000 Olly Betts
 
 	* Cleaned up members of SubMatch and subclasses.
